# OS-Algorithms

./: Bankers Algorithm.ipynb  CMakeLists.txt  DiskScheduling_FIFO_SSTF_SCAN_CSCAN.ipynb  Optimal.py  README.md  cpu_scheduling_algorithms.cpp  ipc_using_pipes.cpp  linux_command_simulator.cpp  main.py  memory_allocation_strategies.py  page-replacement.ipynb  page-replacement.py  pages-generator.py  pyproject.toml  reader_writer_problem.cpp  reader_writer_sync.py
